Fix inline limk delimiter spacing

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -218,6 +218,7 @@ ul.inline-list li:not(.spacer)+li:not(.spacer)::before {
   content: '•';
   color: var(--color-text-muted);
   margin: 0 0.5rem;
+  letter-spacing: 0;
 }
 
 a {
